<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTaskActivity">

    <LinearLayout
        android:id="@+id/linear_layout_label_slot"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/et_task_label"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".65"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:hint="@string/label_hint"
            android:inputType="text"
            android:autofillHints="label"/>

        <View
            android:id="@+id/color_display_view"
            android:background="@color/colorAccent"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/et_task_description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:paddingTop="20dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="30dp"
        android:paddingRight="30dp"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        android:autofillHints="description" />

    <LinearLayout
        android:id="@+id/linear_layout_time_slot"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/et_task_start_time"
            android:text="@string/start_time_label" />

        <EditText
            android:id="@+id/et_task_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:focusable="false"
            android:inputType="none" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/et_task_end_time"
            android:text="@string/end_time_label" />

        <EditText
            android:id="@+id/et_task_end_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:focusable="false"
            android:inputType="none" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_buttons_slot"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/btn_save" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/btn_delete" />

    </LinearLayout>

</LinearLayout>